# django-jwt-auth

./: readme.md  requirements.txt
demo/: requirements.txt
demo/config/: asgi.py  settings.py  urls.py
django-jwt/: README.rst  setup.cfg
django-jwt/django_jwt/: admin.py  apps.py  backends.py  messages.py  models.py  settings.py  urls.py  utils.py
django-jwt/django_jwt/migrations/: 0001_initial.py
django_jwt/config/: asgi.py  settings.py  urls.py  wsgi.py
django_jwt/django_jwt/: __init__.py  backends.py  messages.py  middleware.py  urls.py  utils.py  views.py
