[metadata]
name = django-jwt
version = 0.1
description = A Django app for JWT authentication.
long_description = file: README.rst
url = https://github.com/ar0ne/django-jwt-auth 
author = ar0ne
license = MIT 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 5.1
    djangorestframework >= 3.15.2
    pyjwt >= 2.9.0
